# hacker

./: .gitignore  LICENSE  README.md  docker-compose.yml
app/: pyproject.toml
config/: settings.py
docker/app/: .devcontainer.json  Dockerfile
docker/frontend/: .devcontainer.json  Dockerfile
frontend/hacker/: package.json
frontend/hacker/src/components/: App.tsx
src/: pyproject.toml
src/config/: settings.py
